# python-project-lvl2

./: .coverage  .test.txt.swp  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: .travis.yml  main.yml
gendiff/: .gen.py.swp  .generate_diff.py.swp  __init__.py  check_type.py  core_diff.py  encode.py  gen.py  generate_diff.py  yaml_diff.py
gendiff/formater/: .plain.py.swp  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_1.py  test_app.py  test_diff.py
gendiff/tests/fixtures/: .test_1_res.txt.swp  example.json  example2.json  example_recurs_json_diff.txt  example_recurs_json_json_diff.txt  example_recurs_json_plain.txt  example_recurs_yaml_json_equal.txt  example_yaml_equal.txt  file1.yml  file2.yml  flat.yml  flat2.yml  recursion.json  recursion.yml  result_for_test_json_plain.txt  result_for_test_json_raw.txt  result_for_test_json_stylish.txt  result_for_test_yaml_json.txt  result_for_test_yaml_plain.txt  result_for_test_yaml_raw.txt  result_recursion_json_equal.txt  result_recursion_json_json_diff.txt  result_recursion_json_json_equal.txt  result_recursion_yaml_json_diff.txt  result_recursion_yaml_json_equal.txt  test_1_res.txt  test_json_res.txt
